EL-2375 - Fixing scrollbar issue on firefox

--- a/docs/app/showcase/charts/src/assets/less/site.less
+++ b/docs/app/showcase/charts/src/assets/less/site.less
@@ -112,6 +112,10 @@
   left: 0;
 }
 
+.partition-overflow {
+  overflow: hidden;
+}
+
 
 .docked .partition-popover-buttons {
   position: static;
